# Image-Classifer-KNN

./: README.md
cpp/: CMakeLists.txt  main
py/: TP2.ipynb
